--- a/python/Web Scraping.ipynb
+++ b/python/Web Scraping.ipynb
@@ -2,26 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e074612f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.version) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 207,
    "id": "034d2c04",
    "metadata": {},
    "outputs": [],
@@ -31,31 +12,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 209,
    "id": "48d70130",
    "metadata": {},
    "outputs": [],
    "source": [
-    "our_soup_object = BeautifulSoup(our_html_document,'html.parser')      #the second argument can even be 'lxml' also"
+    "our_soup_object = BeautifulSoup('<h1 attribute_1 = \"Heading Level 1\"\">Future Trends for IoT in 2018</h1>', 'html.parser')    #the second argument can even be 'lxml' also"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 211,
    "id": "2cff14de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tag = our_soup_object.html\n",
-    "tag.name = 'kushank'"
+    "tag = our_soup_object.h1\n",
+    "tag.name = 'kushank'                          #replaces the name of the tag and this is inplace = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "id": "309b11a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<kushank \"=\"\" attribute_1=\"Heading Level 1\">Future Trends for IoT in 2018</kushank>"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "our_soup_object   #will be difficult to read (no format)"
    ]
@@ -152,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tag.name=\"Kushank\"#Basically we can change the tag name (and this is inplace = True)"
+    "tag.name=\"Kushank\""
    ]
   },
   {
