Update Tokenization in NLP.ipynb

--- a/Branches_Of_Machine_Learning/NLP/Tokenization in NLP.ipynb
+++ b/Branches_Of_Machine_Learning/NLP/Tokenization in NLP.ipynb
@@ -12,9 +12,9 @@
     "\n",
     "#1) word Tokenizer : \n",
     "\n",
-    "    a) already trained :- \n",
+    "    a) already trained (only breaks text into small case words)  :- \n",
     "                        from tensorflow.keras.preprocessing.text import text_to_word_sequence\n",
-    "                        result = text_to_word_sequence(text)\n",
+    "                        result = text_to_word_sequence(text) \n",
     "    b) Can train our self tokenizer as well :\n",
     "                        from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "                        #instance of class tokenizer #always include oov_token = 'unk'\n",
