--- a/Branches_Of_Machine_Learning/NLP/Tokenization in NLP.ipynb
+++ b/Branches_Of_Machine_Learning/NLP/Tokenization in NLP.ipynb
@@ -12,10 +12,10 @@
     "\n",
     "#1) word Tokenizer : \n",
     "\n",
-    "    a) already trained (only breaks text into small case words)  :- \n",
+    "    a) already trained (only breaks text into small case words)  (NO VECTORIZATION):- \n",
     "                        from tensorflow.keras.preprocessing.text import text_to_word_sequence\n",
     "                        result = text_to_word_sequence(text) \n",
-    "    b) Can train our self tokenizer as well :\n",
+    "    b) Can train our self tokenizer as well (YES VECTORIZATION):\n",
     "                        from tensorflow.keras.preprocessing.text import Tokenizer\n",
     "                        #instance of class tokenizer #always include oov_token = 'unk'\n",
     "                        t = Tokenizer(oov_token='<unk>')\n",
