--- a/Branches_Of_Machine_Learning/NLP/Tokenization in NLP.ipynb
+++ b/Branches_Of_Machine_Learning/NLP/Tokenization in NLP.ipynb
@@ -5,7 +5,7 @@
    "id": "eaa8fb00",
    "metadata": {},
    "source": [
-    "## Idea is brake the text into tokens 1st and then encode those tokens with a number (also called as vector representation of tokens) and then utilize in ML Algorithms (the vector representation of the text)\n",
+    "## Breaking of long text into small pieces is tokenization. Then we represent it in number by one hot encoding. Further for reducing dimensions we use Embedding. We can use one hot ending or embeddings as an input into our machine learning algorithms
     "\n",
     "### SUMMARY\n",
     "Tokenization can be done in 3 ways\n",
