--- a/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
+++ b/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
@@ -9,8 +9,8 @@
    "source": [
    "pip install gensim \n",
     "def preprocess_text(sen): \n",
-    "sentence = re.sub('[^a-zA-Z]', ' ', sen) # Remove punctuations and numbers \n",
-    "sentence = re.sub(r"\s+[a-zA-Z]\s+", ' ', sentence) # Single character removal \n",
+    "sentence = re.sub('[^a-zA-Z]', ' ', sen) Remove punctuations and numbers \n",
+    "sentence = re.sub(r"\s+[a-zA-Z]\s+", ' ', sentence) Single character removal \n",
    "sentence = re.sub(r'\s+', ' ', sentence) \n",
    "return sentence \n",
     "#for word2vec - lower case, stop words removal, input can be one word at a time, not good for sentence level vectorization (because it averages the word enclosed in the vectors)"
