--- a/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
+++ b/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
    "pip install gensim \n",
-    "#My name is Kushank",
+    "#My name is Kushank \n",
    "#for word2vec - lower case, stop words removal, input can be one word at a time, not good for sentence level vectorization (because it averages the word enclosed in the vectors)"
    ]
   },
