Update NLP_word2vec + sentence2 vec by Sbert.ipynb

--- a/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
+++ b/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
@@ -9,7 +9,13 @@
    "source": [
    "pip install gensim \n",
     "def preprocess_text(sen): \n",
-    "#My name is Kushank \n",
+    "sentence = re.sub('[^a-zA-Z]', ' ', sen) \n",
+    "# Remove punctuations and numbers \n",
+    "sentence = re.sub(r"\s+[a-zA-Z]\s+", ' ', sentence) \n",
+    "# Single character removal \n",
+   "sentence = re.sub(r'\s+', ' ', sentence) \n",
+   "# Removing multiple spaces \n",
+    "return sentence \n",
    "#for word2vec - lower case, stop words removal, input can be one word at a time, not good for sentence level vectorization (because it averages the word enclosed in the vectors)"
    ]
   },
