--- a/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
+++ b/Branches_Of_Machine_Learning/NLP/NLP_word2vec + sentence2 vec by Sbert.ipynb
@@ -11,6 +11,8 @@
     "def preprocess_text(sen): \n",
     "sentence = re.sub('[^a-zA-Z]', ' ', sen) \n",
     "# Remove punctuations and numbers \n",
+    "sentence = re.sub(r"\s+[a-zA-Z]\s+", ' ', sentence) \n",
+    "# Single character removal \n",
    "#for word2vec - lower case, stop words removal, input can be one word at a time, not good for sentence level vectorization (because it averages the word enclosed in the vectors)"
    ]
   },
